# openvpn-manager

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT-STRUCTURE.md  README-DEV.md  README.md  RELEASE-WORKFLOW.md  SECURITY-CHECKLIST.md  SECURITY.md  VERSIONING-GUIDE.md  build.sh  config.py  install-dev.sh  main.py  openvpn-manager-launcher.sh  pyproject.toml  setup.py  theme.py  uninstall.sh  version.sh
.github/: README.md  RELEASE-AUTOMATION.md  labels.json  setup-release-automation.sh
.github/workflows/: auto-version.yml  hotfix.yml  maintenance.yml  release.yml  simple-auto-version.yml  validate-release.yml  validate.yml
debian/: changelog  control  debhelper-build-stamp  files  openvpn-manager-diagnostics.sh  openvpn-manager.postinst.debhelper  openvpn-manager.prerm.debhelper  org.example.openvpn-manager.policy  postinst-minimal  preinst  rules
debian/openvpn-manager/DEBIAN/: control  md5sums  postinst  preinst
debian/openvpn-manager/usr/lib/python3.10/dist-packages/: config.py
debian/openvpn-manager/usr/lib/python3.10/dist-packages/openvpn_manager-0.2.1.egg-info/: PKG-INFO  entry_points.txt
debian/openvpn-manager/usr/share/applications/: openvpn-manager.desktop
debian/openvpn-manager/usr/share/doc/openvpn-manager/: copyright
debian/openvpn-manager/usr/share/openvpn-manager/: check-deps.py
debian/openvpn-manager/usr/share/openvpn-manager/wheels/: PyQt6_sip-13.8.0-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.whl
debian/openvpn-manager/usr/share/polkit-1/actions/: org.example.openvpn-manager.policy
