[project]
name = "openvpn-manager"
version = "0.2.3"
description = "A PyQt6-based OpenVPN connection manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
]
authors = [
    {name = "Iágson Carlos Lima Silva", email = "iagsoncarlos@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

[project.scripts]
openvpn-manager = "main:main"

[project.urls]
"Homepage" = "https://github.com/iagsoncarlos/openvpn-manager"
"Bug Reports" = "https://github.com/iagsoncarlos/openvpn-manager/issues"
"Source" = "https://github.com/iagsoncarlos/openvpn-manager"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
